--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-ariadne==0.23.0
-graphql-core==3.2.3
+Flask==3.0.3
+Flask-GraphQL==2.0.1
+graphene==2.1.9
 loguru==0.7.2
 SPARQLWrapper==2.0.0
-uvicorn==0.29.0
